crates/biome_module_graph/tests/snapshots/test_widening_via_assignment.snap
---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `index.ts`

## Source

```ts
let hey = false;
function f() {
	hey = true;
}
```

## Module Info

```
Exports {
  No exports
}
Imports {
  No imports
}
```
