crates/biome_module_graph/tests/snapshots/test_widening_via_assignment_multiple_values.snap
---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `index.ts`

## Source

```ts
let hey = undefined;
function f() {
	hey = "some string";
}
function g() {
	hey = 123;
}
```

## Module Info

```
Exports {
  No exports
}
Imports {
  No imports
}
```
